eL LECTOR PUEDE LEER TODO MENOS FUNCIONES, EL COND SE PUEDE AUTOC